--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "tailwind": "^4.0.0",
     "typeface-poppins": "^1.1.13",
     "vite-plugin-top-level-await": "^1.3.0",
